--- a/templates/login.html
+++ b/templates/login.html
@@ -63,6 +63,10 @@
 
 <body>
 
+<div style="text-align:center; margin-top:40px;">
+    <img src="/static/logo.png" style="height:80px;">
+</div>
+
 <div class="login-box">
     <h2>Thirupugazh POS Login</h2>
 
@@ -99,9 +103,8 @@ async function login() {
         if (res.status === 200 && data.status === "ok") {
             // ✅ CRITICAL FIX
             localStorage.setItem("user_id", data.user_id);
-            localStorage.setItem("role", data.role);
-            localStorage.setItem("username", username);
-
+            localStorage.setItem("username", data.username);
+            localStorage.setItem("role", data.role);;
             window.location.href = "/ui/billing";
             return;
         }
